Bug 138705 - @echo doesn't work: no output to stdout
Summary: @echo doesn't work: no output to stdout
Status: RESOLVED FIXED
Alias: None
Product: kommander
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: mrudolf
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-12-12 11:29 UTC by Matthias Kretz
Modified: 2007-10-06 20:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kommander file showing the problem (1.27 KB, application/x-kommander)
2006-12-12 11:30 UTC, Matthias Kretz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Kretz 2006-12-12 11:29:13 UTC
Version:           1.2.1 (using KDE 3.5.5, Kubuntu (edgy) 4:3.5.5-0ubuntu3)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.17-10-generic

Using @echo in the Kommander Text has no effect. @debug works at the same places, though.

I will attach a simple testcase where @echo is called from Form1.initialize() and ExecButton1.default() -> both don't output anything.
Comment 1 Matthias Kretz 2006-12-12 11:30:40 UTC
Created attachment 18896 [details]
Kommander file showing the problem
Comment 2 András Manţia 2007-10-06 20:24:11 UTC
SVN commit 722145 by amantia:

Make @echo really work.

BUG: 138705

 M  +1 -0      ChangeLog  
 M  +1 -0      widget/functionlib.cpp  
 M  +6 -0      widget/kommanderfunctions.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=722145