Make @echo really work.

BUG: 138705

svn path=/branches/KDE/3.5/kdewebdev/kommander/; revision=722145